tf/network.tf
resource "aws_vpc" "app_vpc" {
  cidr_block       = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = "app_vpc"
  }
}

resource "aws_subnet" "app_subnet_public_1" {
  vpc_id            = aws_vpc.app_vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "app_subnet_public_1"
  }
}

resource "aws_subnet" "app_subnet_public_2" {
  vpc_id            = aws_vpc.app_vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name = "app_subnet_public_2"
  }
}

resource "aws_internet_gateway" "app_gw" {
  vpc_id = aws_vpc.app_vpc.id

  tags = {
    Name = "app_gw"
  }
}

resource "aws_route_table" "app_route_table" {
  vpc_id = aws_vpc.app_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.app_gw.id
  }

  tags = {
    Name = "app_route_table"
  }
}

resource "aws_route_table_association" "a_public_1" {
  subnet_id      = aws_subnet.app_subnet_public_1.id
  route_table_id = aws_route_table.app_route_table.id
}

resource "aws_route_table_association" "a_public_2" {
  subnet_id      = aws_subnet.app_subnet_public_2.id
  route_table_id = aws_route_table.app_route_table.id
}
